--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,23 @@
   <title>Home: mabrweb.com Webshop</title>
   <base href="/">
 
-  <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-icon-144x144.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="assets/android-icon-192x192.png">
+
+  <meta name="application-name" content="mabr7-shop.firebaseapp.com">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Mabrweb Webshop von Martin Polak und Bruno Staub (MABR)">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="assets/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <meta name="description" content="Mabrweb Webshop von Martin Polak und Bruno Staub (MABR) ist ein Webshop. Wir verkaufen diverse Produkte vom Gartenartikel bis zum Maileg-Tierchen.">
+  <meta name="keywords" content="mabrweb, shop, maileg, stoff, schuhe, gartenzubehör, sport, sonnenbrillen, fotoapparate, aktuell">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
   <app-root></app-root>
